# CC-tool

./: DEVELOPER_GUIDE.md  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  DataTypes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/modules/: README.txt
src-tauri/resources/tests/: RF TM4070.rmd  config_response.txt
src-tauri/src/: data_types.rs  device_calibration_parser.rs  device_config_parser.rs  input_processing.rs  lib.rs  main.rs  mk_module_description.rs  module_description_parser.rs  tinymesh_calibration_mod.rs  tinymesh_comm_mod.rs  tinymesh_config_mod.rs  tinymesh_device_info_mod.rs  tinymesh_serial_util.rs
src-tauri/tests/: device_calibration_parser_test.rs  device_config_parser_test.rs  input_processing_test.rs  module_description_parser_test.rs
src/components/: AppTabs.tsx  ButtonComp.tsx  Calibration.tsx  CommunicationPanel.tsx  ConfigAndCommunicationTab.tsx  ConfigModeToggle.tsx  ConfigPanel.tsx  ConnectDisconnectButton.tsx  DeviceInfo.tsx  DeviceSelect.tsx  Header.tsx  InputWithDatalist.tsx  RSSIChart.tsx  TerminalPanel.tsx  TestModeSelect.tsx
src/utils/: connection_util.ts  device_info_util.ts
